# stellatus-content-crew

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  rag_config.yaml  settings.yaml  writing_style.md
docs/: agents.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  notion-integration.md  rag-system.md  writing-style.md
prompts/agents/: editor_agent.md  image_prompt_agent.md  quality_reviewer_agent.md  research_agent.md  seo_agent.md  visual_suggestion_agent.md  writer_agent.md
src/: __init__.py
src/agents/: __init__.py
src/agents/base/: __init__.py  agent.py
src/agents/implementations/: __init__.py  editor_agent.py  image_prompt_agent.py  quality_reviewer_agent.py  research_agent.py  seo_agent.py  visual_suggestion_agent.py  writer_agent.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config.py  events.py  exceptions.py  registry.py
src/integrations/: __init__.py
src/integrations/notion/: __init__.py  client.py  publisher.py
src/interfaces/: __init__.py  agent_interface.py  skill_interface.py
src/llm/: __init__.py  anthropic_client.py  openai_client.py
src/orchestrator/: __init__.py  content_pipeline.py  orchestrator.py
src/rag/: __init__.py  rag_service.py
src/rag/embeddings/: __init__.py  base.py  openai_embeddings.py
src/rag/ingestion/: __init__.py  blog_processor.py  chunking.py  pdf_processor.py
src/rag/retrieval/: __init__.py  retriever.py
src/rag/vector_store/: __init__.py  chroma_store.py
src/skills/: __init__.py  base.py  keyword_extraction.py  llm_call.py  rag_query.py  web_search.py
src/storage/: content_store.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
